localization , gradiant bug

--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "init-db": "node scripts/init-db.js",
     "migrate": "node api/config/migrate-to-logo-maker.js",
     "migrate:simple": "node api/config/simple-migrate.js",
+    "migrate:multilingual": "node api/config/migrate-multilingual.js",
     "migrate:win": "node api/config/migrate-to-logo-maker.js",
     "migrate:unix": "node api/config/migrate-to-logo-maker.js",
     "db:migrate": "node api/config/migrate-to-logo-maker.js",
     "db:migrate:simple": "node api/config/simple-migrate.js",
+    "db:migrate:multilingual": "node api/config/migrate-multilingual.js",
     "db:init": "node scripts/init-db.js",
     "db:reset": "node scripts/reset-db.js",
     "build": "echo 'No build step required'",
     "vercel-build": "echo 'No build step required'",
     "test": "echo 'No tests specified'",
     "test:mobile": "node test_mobile_endpoints.js",
+    "test:multilingual": "node test_multilingual.js",
+    "test:categories-multilingual": "node test_categories_multilingual.js",
     "lint": "echo 'No linter configured'",
     "deploy": "vercel --prod",
     "deploy:preview": "vercel",
@@ -62,7 +66,9 @@
     "pg": "^8.11.3",
     "cloudinary": "^1.41.0",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "accept-language-parser": "^1.5.0",
+    "luxon": "^3.4.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
