--- a/env.example
+++ b/env.example
@@ -15,6 +15,15 @@ ASSET_BASE_URL="https://your-cdn-or-s3/"
 JWT_SECRET=tarekmariem2006
 JWT_EXPIRES_IN=7d
 
+# Gmail Configuration (for OTP verification)
+# To get Gmail App Password:
+# 1. Go to your Google Account settings
+# 2. Security -> 2-Step Verification (must be enabled)
+# 3. App passwords -> Generate new app password
+# 4. Use the generated 16-character password here
+GMAIL_USER=your-email@gmail.com
+GMAIL_APP_PASSWORD=your-16-character-app-password
+
 # CORS Configuration
 # CORS_ORIGIN=http://localhost:3000
 
