--- a/package.json
+++ b/package.json
@@ -78,7 +78,8 @@
         "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^7.0.10",
         "pg": "^8.11.3",
-        "sharp": "^0.34.5"
+        "sharp": "^0.34.5",
+        "stripe": "^20.0.0"
     },
     "devDependencies": {
         "axios": "^1.6.0",
