--- a/env.example
+++ b/env.example
@@ -29,3 +29,13 @@ GMAIL_APP_PASSWORD=your-16-character-app-password
 
 # Vercel Configuration
 # VERCEL_URL=your_vercel_url_here
+
+# Stripe Configuration
+STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+STRIPE_PRICE_WEEKLY=price_your_weekly_price_id_here
+STRIPE_PRICE_MONTHLY=price_your_monthly_price_id_here
+STRIPE_PRICE_YEARLY=price_your_yearly_price_id_here
+
+# Frontend URL (for Stripe Checkout redirects)
+FRONTEND_URL=http://localhost:3000
