--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "migrate": "node api/config/migrate-to-logo-maker.js",
         "migrate:auth": "node api/config/migrate-auth.js",
         "migrate:refresh-tokens": "node scripts/migrate-refresh-tokens.js",
+        "migrate:shape-categories": "node scripts/migrate-shape-categories.js",
         "migrate:recreate-users": "node api/config/recreate-users-table.js",
         "migrate:simple": "node api/config/simple-migrate.js",
         "migrate:multilingual": "node api/config/migrate-multilingual.js",
